# getPass

./: .Rbuildignore  .gitignore  .travis.yml  CONTRIBUTING.md  ChangeLog  DESCRIPTION  ISSUE_TEMPLATE.md  LICENSE  NAMESPACE  README.md  appveyor.yml  cleanup  configure  configure.ac
R/: 000_globalVariables.r  argon2.r  getPass-package.r  getPass.r  getpwd_rgui.r  password.r  readline_masked_rstudio.r  readline_masked_tcltk.r  readline_masked_term.r  readline_masked_wincred.r  readline_nomask.r  utils.r  zerobuff.r  zzz.r
inst/: CITATION
inst/doc/: getPass.Rnw
man/: getPass-package.Rd  getPass.Rd  hashing.Rd  zerobuff.Rd
src/: Makevars  Makevars.in  Makevars.win  argon2.c  getPass.h  getPass_native.c  os.h  platform.h  print_stderr.c  readline_masked.c  wcc_zerobuffer.c
src/windows/: getPass.cpp
src/x11/: .gitignore  Makefile  getPass.c
tests/: hash.R  readline_masked.r  readline_nomask.r  term.R
vignettes/: build_pdf.sh  getPass.Rmd  getPass.Rnw  rebuild
vignettes/include/: 00-acknowledgement.tex  getPass.bib  header.html  lastpage.sty  settings.tex
